# django-postgres-comment

./: .gitignore  README.md  pyproject.toml  setup.py
example/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
example/exampleapp/: fixtures.json
example/exampleapp/main_app/: models.py  views.py
example/exampleapp/main_app/migrations/: 0001_initial.py
example/exampleapp/tickets/: settings.py  urls.py  wsgi.py
src/django_pg_label/: __init__.py  apps.py  query.py
src/django_postgres_comment/: __init__.py  apps.py  query.py
tests/: test_rewrite_query.py
