[tool.poetry]
name = "django-postgres-comment"
version = "0.1.0"
description = "Add comments to SQL queries to \"label\" them."
authors = ["ylobanov <ultrasnet@mail.ru>"]
repository = "https://github.com/krnr/django-postgres-comment"
license = "GNU v3"
packages = [
    { include = "django_postgres_comment", from = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
